--- a/wallet-app/android/app/src/main/AndroidManifest.xml
+++ b/wallet-app/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="lesson1"
+        android:label="wallet_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
