--- a/wallet-app/macos/Runner/Configs/AppInfo.xcconfig
+++ b/wallet-app/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = lesson1
+PRODUCT_NAME = wallet_app
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.lesson1
+PRODUCT_BUNDLE_IDENTIFIER = com.example.wallet_app
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
